fix css class name so it actually works

--- a/ThreeTacos.Tacomponents/DragonSpinner.razor
+++ b/ThreeTacos.Tacomponents/DragonSpinner.razor
@@ -3,4 +3,4 @@ Adapted from https://opengameart.org/content/flying-dragon-rework
 Original author: https://opengameart.org/users/antumdeluge
 https://creativecommons.org/licenses/by/3.0/
 *@
-<div class="dragon"></div>
+<div class="dragon-loader"></div>
